--- a/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/article-add-edit.html
@@ -1,83 +1,83 @@
 <div class="form-group"><!--项目id-->
     <label for="id_custom_id" class="col-sm-3 control-label">
-        {{ form.custom_id.label }}：
+        {{ form_article.custom_id.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.custom_id }}
+        {{ form_article.custom_id }}
     </div>
     <label id="e_custom_id" class="pull-right">
-        {{ forme.custom_id.errors }}
+        {{ form_article.custom_id.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--续贷金额-->
     <label for="id_renewal" class="col-sm-3 control-label">
-        {{ form.renewal.label }}：
+        {{ form_article.renewal.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.renewal }}
+        {{ form_article.renewal }}
     </div>
     <label id="e_renewal" class="pull-right">
-        {{ form.renewal.errors }}
+        {{ form_article.renewal.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--新增金额-->
     <label for="id_augment" class="col-sm-3 control-label">
-        {{ form.augment.label }}：
+        {{ form_article.augment.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.augment }}
+        {{ form_article.augment }}
     </div>
     <label id="e_augment" class="pull-right">
-        {{ form.augment.errors }}
+        {{ form_article.augment.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--授信期限-->
     <label for="id_credit_term" class="col-sm-3 control-label">
-        {{ form.credit_term.label }}：
+        {{ form_article.credit_term.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.credit_term }}
+        {{ form_article.credit_term }}
     </div>
     <label id="e_credit_term" class="pull-right">
-        {{ form.credit_term.errors }}
+        {{ form_article.credit_term.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--项目经理id-->
     <label for="id_director_id" class="col-sm-3 control-label">
-        {{ form.director_id.label }}：
+        {{ form_article.director_id.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.director_id }}
+        {{ form_article.director_id }}
     </div>
     <label id="e_director_id" class="pull-right">
-        {{ form.director_id.errors }}
+        {{ form_article.director_id.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--项目助理id-->
     <label for="id_assistant_id" class="col-sm-3 control-label">
-        {{ form.assistant_id.label }}：
+        {{ form_article.assistant_id.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.assistant_id }}
+        {{ form_article.assistant_id }}
     </div>
     <label id="e_assistant_id" class="pull-right">
-        {{ form.assistant_id.errors }}
+        {{ form_article.assistant_id.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--风控专员id-->
     <label for="id_control_id" class="col-sm-3 control-label">
-        {{ form.control_id.label }}：
+        {{ form_article.control_id.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.control_id }}
+        {{ form_article.control_id }}
     </div>
     <label id="e_control_id" class="pull-right">
-        {{ form.control_id.errors }}
+        {{ form_article.control_id.errors }}
     </label>
 </div>
