--- a/A_dbms/templates/dbms/meeting/modl/meeting-article-del-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/meeting-article-del-mod.html
@@ -8,11 +8,11 @@
                     <input style="display: none" name="meeting_id"
                            value="{{ meeting_obj.id }}">
                     <input style="display: none" name="article_id"
-                           value="{{ article_obj.id }}">
+                           id="delMeetingArticleId">
                 </h4>
             </div>
             <div class="modal-body">
-                是否确定取消“{{ article_obj.article_num }}”本次上会!!!!
+                是否确定取消项目本次上会!!!!
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
