--- a/A_dbms/templates/dbms/meeting/modl/mod_form/meeting-add.html
+++ b/A_dbms/templates/dbms/meeting/modl/mod_form/meeting-add.html
@@ -1,35 +1,35 @@
 <div class="form-group"> <!--评审类型-->
     <label for="id_review_model" class="col-sm-3 control-label">
-        {{ form.review_model.label }}：
+        {{ meeting_add_form.review_model.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.review_model }}
+        {{ meeting_add_form.review_model }}
     </div>
     <label id="e_review_model" class="pull-right">
-        {{ form.review_model.errors }}
+        {{ meeting_add_form.review_model.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--评审日期-->
     <label for="id_review_date" class="col-sm-3 control-label">
-        {{ form.review_date.label }}：
+        {{ meeting_add_form.review_date.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.review_date }}
+        {{ meeting_add_form.review_date }}
     </div>
     <label id="e_review_date" class="pull-right">
-        {{ form.review_date.errors }}
+        {{ meeting_add_form.review_date.errors }}
     </label>
 </div>
 
 <div class="form-group"><!--参会项目-->
     <label for="id_article" class="col-sm-3 control-label">
-        {{ form.article.label }}：
+        {{ meeting_add_form.article.label }}：
     </label>
     <div class="col-sm-9">
-        {{ form.article }}
+        {{ meeting_add_form.article }}
     </div>
     <label id="e_article" class="pull-right">
-        {{ form.article.errors }}
+        {{ meeting_add_form.article.errors }}
     </label>
 </div>
