--- a/A_dbms/templates/dbms/article/scan/summry.html
+++ b/A_dbms/templates/dbms/article/scan/summry.html
@@ -2,11 +2,14 @@
     <div class="panel-heading">
         <label>项目情况</label>
         <label class="navbar-right">
+            <a class="btn btn-danger btn-sm " id="feedbackArticle">
+                反馈
+            </a><!--#path('article/del/'-->
             <a class="btn btn-danger btn-sm " id="editArticle">
-                修改项目
+                修改
             </a><!--#path('article/del/'-->
             <a class="btn btn-danger btn-sm " id="delArticle">
-                删除项目
+                删除
             </a><!--#path('article/del/'-->
         </label>
     </div>
