--- a/A_dbms/templates/dbms/meeting/modl/comment-add-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/comment-add-mod.html
@@ -8,7 +8,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="addCommentModalLabel">
-                    分配评委：{{ article_obj.article_num }}
+                    评审意见：{{ article_obj.article_num }}
                     <input style="display: none" name="article_id"
                            value="{{ article_obj.id }}">
                     <input style="display: none" name="expert_id"
@@ -18,7 +18,7 @@
             <div class="modal-body">
 
                 <form class="form-horizontal">
-                    {% include 'dbms/meeting/modl/mod_form/add-comment.html' %}
+                    {% include 'dbms/meeting/modl/mod_form/comment-add.html' %}
                 </form>
 
             </div>
