--- a/A_dbms/templates/dbms/meeting/scan/summry.html
+++ b/A_dbms/templates/dbms/meeting/scan/summry.html
@@ -3,16 +3,19 @@
         <label>评审会情况</label>
         <label class="pull-right">
             <a class="btn btn-success btn-sm " id="meetingNotice">
-                评审会通知
+                会议通知
             </a>
-            <a class="btn btn-danger btn-sm " id="closeMeeting">
-                完成评审会
+            <a class="btn btn-success btn-sm " id="addMeetingArticle">
+                追加项目
             </a>
-            <a class="btn btn-danger btn-sm " id="editMeeting">
-                修改评审会
+            <a class="btn btn-success btn-sm " id="editMeeting">
+                改期
+            </a>
+            <a class="btn btn-success btn-sm " id="closeMeeting">
+                完成上会
             </a>
             <a class="btn btn-danger btn-sm " id="delMeeting">
-                取消评审会
+                取消会议
             </a>
         </label>
     </div>
