--- a/A_dbms/templates/dbms/meeting/meeting-article.html
+++ b/A_dbms/templates/dbms/meeting/meeting-article.html
@@ -11,6 +11,7 @@
         {% include 'dbms/meeting/modl/expert-allot-mod.html' %}
         {% include 'dbms/meeting/modl/comment-add-mod.html' %}
         {% include 'dbms/meeting/modl/single-add-mod.html' %}
+        {% include 'dbms/meeting/modl/single-del-mod.html' %}
     </div>
 
 {% endblock %}
@@ -19,4 +20,5 @@
     {% include 'dbms/meeting/extra/js-expert-allot.html' %}
     {% include 'dbms/meeting/extra/js-comment-add.html' %}
     {% include 'dbms/meeting/extra/js-single-add.html' %}
+    {% include 'dbms/meeting/extra/js-single-del.html' %}
 {% endblock %}
