--- a/A_dbms/templates/dbms/article/article/filter.html
+++ b/A_dbms/templates/dbms/article/article/filter.html
@@ -33,7 +33,7 @@
         </form>
     </label>
     <label class="pull-right">
-        <a class="btn btn-success btn-sm" id="addArticle">
+        <a class="btn btn-primary btn-sm" id="addArticle">
             添加项目
         </a>
     </label>
