--- a/A_dbms/templates/dbms/meeting/article/summry.html
+++ b/A_dbms/templates/dbms/meeting/article/summry.html
@@ -10,7 +10,7 @@
             <a class="btn btn-primary btn-sm " id="singleQuota">
                 单项额度
             </a> <!--#path('meeting/single/'-->
-             <a class="btn btn-primary btn-sm " id="articleSign">
+             <a class="btn btn-primary btn-sm " id="articleSignB">
                 项目签批
             </a> <!--#path('meeting/article/sign/'-->
         </label>
