--- a/A_dbms/templates/dbms/meeting/meeting/filter.html
+++ b/A_dbms/templates/dbms/meeting/meeting/filter.html
@@ -25,7 +25,7 @@
     </label>
 
     <label class="pull-right">
-        <a class="btn btn-success btn-sm" id="addMeeting">
+        <a class="btn btn-primary btn-sm" id="addMeeting">
             添加评审会
         </a>
     </label>
