--- a/A_dbms/templates/dbms/article/scan/summry.html
+++ b/A_dbms/templates/dbms/article/scan/summry.html
@@ -2,10 +2,10 @@
     <div class="panel-heading">
         <label>项目情况</label>
         <label class="navbar-right">
-            <a class="btn btn-danger btn-sm " id="feedbackArticle">
+            <a class="btn btn-primary btn-sm " id="feedbackArticle">
                 反馈
             </a><!--#path('article/del/'-->
-            <a class="btn btn-danger btn-sm " id="editArticle">
+            <a class="btn btn-primary btn-sm " id="editArticle">
                 修改
             </a><!--#path('article/del/'-->
             <a class="btn btn-danger btn-sm " id="delArticle">
