--- a/A_dbms/templates/dbms/meeting/article/detail/content/single.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/content/single.html
@@ -8,7 +8,7 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
-            <th>授信类型</th>
+            <th>额度类型</th>
             <th>授信额度（元）</th>
             <th>费率（%）</th>
             <th>放款金额</th>
@@ -23,7 +23,7 @@
                 <td>{{ single.flow_rate }}</td>
                 <td>{{ single.amount }}</td>
                 <td>
-                    <a class="btn btn-primary btn-xs delSingleQuotaB">
+                    <a class="btn btn-danger btn-xs delSingleQuotaB">
                         删除
                     </a>
                 </td>
