--- a/A_dbms/templates/dbms/meeting/scan/summry.html
+++ b/A_dbms/templates/dbms/meeting/scan/summry.html
@@ -2,16 +2,16 @@
     <div class="panel-heading">
         <label>评审会情况</label>
         <label class="pull-right">
-            <a class="btn btn-success btn-sm " id="meetingNotice">
+            <a class="btn btn-primary btn-sm " id="meetingNotice">
                 会议通知
             </a>
-            <a class="btn btn-success btn-sm " id="addMeetingArticle">
+            <a class="btn btn-primary btn-sm " id="addMeetingArticle">
                 追加项目
             </a>
-            <a class="btn btn-success btn-sm " id="editMeeting">
+            <a class="btn btn-primary btn-sm " id="editMeeting">
                 改期
             </a>
-            <a class="btn btn-success btn-sm " id="closeMeeting">
+            <a class="btn btn-primary btn-sm " id="closeMeeting">
                 完成上会
             </a>
             <a class="btn btn-danger btn-sm " id="delMeeting">
