--- a/A_dbms/templates/dbms/article/scan/tab/content.html
+++ b/A_dbms/templates/dbms/article/scan/tab/content.html
@@ -1,9 +1,14 @@
 <div class="tab-content">
+        <div role="tabpanel"
+         class="tab-pane"
+         id="feedback"> <!--反馈结论-->
+        {% include 'dbms/article/scan/tab/content/feedback.html' %}
+    </div>
+
     <div role="tabpanel"
          class="tab-pane"
          id="meeting"> <!--评审会-->
         {% include 'dbms/article/scan/tab/content/meeting.html' %}
-
     </div>
     <div role="tabpanel"
          class="tab-pane"
