--- a/A_dbms/templates/dbms/article/scan/tab/present.html
+++ b/A_dbms/templates/dbms/article/scan/tab/present.html
@@ -1,6 +1,15 @@
 <ul class="nav nav-tabs"
     role="tablist"
     style="background-color: #f5f5f5">
+    <li role="presentation">
+        <a href="#feedback"
+           style="background-color: #f5f5f5"
+           aria-controls="profile"
+           role="tab"
+           data-toggle="tab">
+            反馈结论
+        </a>
+    </li>
 
     <li role="presentation">
         <a href="#meeting"
