--- a/A_dbms/templates/dbms/meeting/article/summry.html
+++ b/A_dbms/templates/dbms/meeting/article/summry.html
@@ -48,7 +48,7 @@
             担保期限：{{ article_obj.credit_term }}个月
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            提交日期：{{ article_obj.article_date }}
+            签批日期：{{ article_obj.sign_date }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             项目状态：{{ article_obj.get_article_state_display }}
