--- a/A_dbms/templates/dbms/article/extra/js-feedback-add.html
+++ b/A_dbms/templates/dbms/article/extra/js-feedback-add.html
@@ -21,8 +21,10 @@
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
-            var ttt = $('#id_suggestion').val()
-            postData['suggestion'] = ttt;
+            var suggestion_text = $('#id_suggestion').val()
+            postData['suggestion'] = suggestion_text;
+            var analysis_text = $('#id_analysis').val()
+            postData['analysis'] = analysis_text;
 
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr)
@@ -34,13 +36,14 @@
                     var dict = JSON.parse(arg);
                     console.log(dict);
                     if (dict.status) {
-                        alert(dict.message);
                         $('#addFeedbackModal').modal('hide');
+                        alert(dict.message);
                         window.location.reload();
                     } else {
                         alert(dict.message);
                         $('#e_propose').text(dict.forme.propose);
                         $('#e_suggestion').text(dict.forme.suggestion);
+                        $('#e_analysis').text(dict.forme.analysis);
                     }
                 }
             })
