--- a/A_dbms/templates/dbms/article/modl/mod_form/feedback-add-edit.html
+++ b/A_dbms/templates/dbms/article/modl/mod_form/feedback-add-edit.html
@@ -10,7 +10,19 @@
     </label>
 </div>
 
-<div class="form-group"><!--风控意见-->
+<div class="form-group"><!--风险分析-->
+    <label for="id_analysis" class="col-sm-3 control-label">
+        {{ form_feedback.analysis.label }}：
+    </label>
+    <div class="col-sm-9">
+        {{ form_feedback.analysis }}
+    </div>
+    <label id="e_analysis" class="pull-right">
+        {{ form_feedback.analysis.errors }}
+    </label>
+</div>
+
+<div class="form-group"><!--风控建议-->
     <label for="id_suggestion" class="col-sm-3 control-label">
         {{ form_feedback.suggestion.label }}：
     </label>
