--- a/A_dbms/templates/dbms/meeting/article/detail/content.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/content.html
@@ -12,4 +12,10 @@
         {% include 'dbms/meeting/article/detail/content/single.html' %}
     </div>
 
+    <div role="tabpanel"
+         class="tab-pane"
+         id="sign"><!--签批详情-->
+        {% include 'dbms/meeting/article/detail/content/sign.html' %}
+    </div>
+
 </div>
