--- a/A_dbms/templates/dbms/meeting/article/detail/present.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/present.html
@@ -30,4 +30,16 @@
             单项额度
         </a>
     </li>
+
+    <li role="presentation">
+        <a href="#sign"
+           style="background-color: #f5f5f5"
+           aria-controls="messages"
+           role="tab"
+           data-toggle="tab">
+            签批详情
+        </a>
+    </li>
+
+
 </ul>
