--- a/A_dbms/templates/dbms/agree/modl/agree-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/agree-add-mod.html
@@ -16,13 +16,9 @@
                 <form class="form-horizontal">
                     {% include 'dbms/agree/modl/mod_form/agree-add-edit.html' %}
                 </form>
-
             </div>
 
-
-            <label id="formErrors">
-            </label>
-
+            <label id="formErrors"></label>
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
