--- a/A_dbms/templates/dbms/article/article-agree.html
+++ b/A_dbms/templates/dbms/article/article-agree.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}编辑项目{% endblock %}
+{% block title %}查看项目{% endblock %}
 
 {% block right-content-container %}
 
