--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -16,6 +16,9 @@
                 <form class="form-horizontal">
                     {% include 'dbms/agree/modl/mod_form/counter-add-edit.html' %}
                 </form>
+                <form id="form1" disabled="disabled" style="display: none;" class="form-horizontal">
+                    {% include 'dbms/agree/modl/mod_form/counter-add-edit.html' %}
+                </form>
             </div>
 
             <label id="formErrors"></label>
