--- a/A_dbms/templates/dbms/agree/modl/mod_form/counter-assure-c.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/counter-assure-c.html
@@ -1,13 +1,13 @@
-<div id="counter-assure-c" style="display: none">
+<div id="counter-assure-c" class="extned" style="display: none">
     <div class="form-group"><!--企业保证人-->
         <label for="id_custome_c" class="col-sm-3 control-label">
-            {{ form_counter_assure_c.custome.label }}：
+            {{ form_counter_assure_c.custome_c.label }}：
         </label>
         <div class="col-sm-9">
-            {{ form_counter_assure_c.custome }}
+            {{ form_counter_assure_c.custome_c }}
         </div>
         <label id="e_custome_c" class="pull-right">
-            {{ form_counter_assure_c.custome.errors }}
+            {{ form_counter_assure_c.custome_c.errors }}
         </label>
     </div>
 </div>
