--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -17,6 +17,8 @@
                     {% include 'dbms/agree/modl/mod_form/counter-add-edit.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-assure-c.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-assure-p.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-house.html' %}
+                    {% include 'dbms/agree/modl/mod_form/counter-ground.html' %}
                 </form>
 
             </div>
